data/forge_javadoc/1.7.10/processed/net_minecraft_client_model_ModelRenderer.md
# ModelRenderer

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelRenderer

## Class signature

```java
public class ModelRenderer extends java.lang.Object
```

## Constructors

- `ModelRenderer(ModelBase p_i1173_1_)`
- `ModelRenderer(ModelBase p_i1174_1_, int p_i1174_2_, int p_i1174_3_)`
- `ModelRenderer(ModelBase p_i1172_1_, java.lang.String p_i1172_2_)`

## Methods

- `ModelRenderer addBox(float p_78789_1_, float p_78789_2_, float p_78789_3_, int p_78789_4_, int p_78789_5_, int p_78789_6_)`
- `void addBox(float p_78790_1_, float p_78790_2_, float p_78790_3_, int p_78790_4_, int p_78790_5_, int p_78790_6_, float p_78790_7_)`
- `ModelRenderer addBox(java.lang.String p_78786_1_, float p_78786_2_, float p_78786_3_, float p_78786_4_, int p_78786_5_, int p_78786_6_, int p_78786_7_)`
- `void addChild(ModelRenderer p_78792_1_)`
- `void postRender(float p_78794_1_)`
- `void render(float p_78785_1_)`
- `void renderWithRotation(float p_78791_1_)`
- `void setRotationPoint(float p_78793_1_, float p_78793_2_, float p_78793_3_)`
- `ModelRenderer setTextureOffset(int p_78784_1_, int p_78784_2_)`
- `ModelRenderer setTextureSize(int p_78787_1_, int p_78787_2_)`

## Fields

- `java.lang.String boxName`
- `java.util.List childModels`
- `java.util.List cubeList`
- `boolean isHidden`
- `boolean mirror`
- `float offsetX`
- `float offsetY`
- `float offsetZ`
- `float rotateAngleX`
- `float rotateAngleY`
- `float rotateAngleZ`
- `float rotationPointX`
- `float rotationPointY`
- `float rotationPointZ`
- `boolean showModel`
- `float textureHeight`
- `float textureWidth`